crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__manifest__test__build_dependencies_in_feature_with_pixi_build.snap
---
source: crates/pixi_manifest/src/toml/manifest.rs
expression: "expect_parse_failure(r#\"\n        [workspace]\n        channels = []\n        platforms = []\n        preview = [\"pixi-build\"]\n\n        [package]\n\n        [package.build]\n        backend = { name = \"foobar\", version = \"*\" }\n\n        [feature.foobar.build-dependencies]\n        \"#,)"
---
  × [build-dependencies] in features are not supported when `pixi-build` is enabled.
    ╭─[pixi.toml:12:9]
 11 │ 
 12 │         [feature.foobar.build-dependencies]
    ·         ────────────────────────────────────
 13 │         
    ╰────
